--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -1,3 +1,11 @@
 .navigation {
   box-shadow: -1px 2px 5px 1px rgba(0, 0, 0, 0.4);
 }
+
+.navbar-brand {
+  margin-left: 1em;
+}
+
+.link {
+  margin-right: 0.5em;
+}
