--- a/src/components/App.css
+++ b/src/components/App.css
@@ -705,13 +705,13 @@ a.has-text-info:hover, a.has-text-info:focus {
   background-color: #b5b5b5 !important; }
 
 .has-text-success {
-  color: #23d160 !important; }
+  color: #ec7265 !important; }
 
 a.has-text-success:hover, a.has-text-success:focus {
-  color: #1ca64c !important; }
+  color: #e64937 !important; }
 
 .has-background-success {
-  background-color: #23d160 !important; }
+  background-color: #ec7265 !important; }
 
 .has-text-warning {
   color: #ffdd57 !important; }
@@ -1570,60 +1570,60 @@ a.box:active {
         box-shadow: none;
         color: #fff; }
   .button.is-success {
-    background-color: #23d160;
+    background-color: #ec7265;
     border-color: transparent;
     color: #fff; }
     .button.is-success:hover, .button.is-success.is-hovered {
-      background-color: #22c65b;
+      background-color: #eb6859;
       border-color: transparent;
       color: #fff; }
     .button.is-success:focus, .button.is-success.is-focused {
       border-color: transparent;
       color: #fff; }
       .button.is-success:focus:not(:active), .button.is-success.is-focused:not(:active) {
-        box-shadow: 0 0 0 0.125em rgba(35, 209, 96, 0.25); }
+        box-shadow: 0 0 0 0.125em rgba(236, 114, 101, 0.25); }
     .button.is-success:active, .button.is-success.is-active {
-      background-color: #20bc56;
+      background-color: #e95d4e;
       border-color: transparent;
       color: #fff; }
     .button.is-success[disabled] {
-      background-color: #23d160;
+      background-color: #ec7265;
       border-color: transparent;
       box-shadow: none; }
     .button.is-success.is-inverted {
       background-color: #fff;
-      color: #23d160; }
+      color: #ec7265; }
       .button.is-success.is-inverted:hover {
         background-color: #f2f2f2; }
       .button.is-success.is-inverted[disabled] {
         background-color: #fff;
         border-color: transparent;
         box-shadow: none;
-        color: #23d160; }
+        color: #ec7265; }
     .button.is-success.is-loading::after {
       border-color: transparent transparent #fff #fff !important; }
     .button.is-success.is-outlined {
       background-color: transparent;
-      border-color: #23d160;
-      color: #23d160; }
+      border-color: #ec7265;
+      color: #ec7265; }
       .button.is-success.is-outlined:hover, .button.is-success.is-outlined:focus {
-        background-color: #23d160;
-        border-color: #23d160;
+        background-color: #ec7265;
+        border-color: #ec7265;
         color: #fff; }
       .button.is-success.is-outlined.is-loading::after {
-        border-color: transparent transparent #23d160 #23d160 !important; }
+        border-color: transparent transparent #ec7265 #ec7265 !important; }
       .button.is-success.is-outlined[disabled] {
         background-color: transparent;
-        border-color: #23d160;
+        border-color: #ec7265;
         box-shadow: none;
-        color: #23d160; }
+        color: #ec7265; }
     .button.is-success.is-inverted.is-outlined {
       background-color: transparent;
       border-color: #fff;
       color: #fff; }
       .button.is-success.is-inverted.is-outlined:hover, .button.is-success.is-inverted.is-outlined:focus {
         background-color: #fff;
-        color: #23d160; }
+        color: #ec7265; }
       .button.is-success.is-inverted.is-outlined[disabled] {
         background-color: transparent;
         border-color: #fff;
@@ -2095,13 +2095,13 @@ a.box:active {
       box-shadow: 0 0 0 0.125em rgba(181, 181, 181, 0.25); }
   .input.is-success,
   .textarea.is-success {
-    border-color: #23d160; }
+    border-color: #ec7265; }
     .input.is-success:focus, .input.is-success.is-focused, .input.is-success:active, .input.is-success.is-active,
     .textarea.is-success:focus,
     .textarea.is-success.is-focused,
     .textarea.is-success:active,
     .textarea.is-success.is-active {
-      box-shadow: 0 0 0 0.125em rgba(35, 209, 96, 0.25); }
+      box-shadow: 0 0 0 0.125em rgba(236, 114, 101, 0.25); }
   .input.is-warning,
   .textarea.is-warning {
     border-color: #ffdd57; }
@@ -2304,13 +2304,13 @@ a.box:active {
     .select.is-info select:focus, .select.is-info select.is-focused, .select.is-info select:active, .select.is-info select.is-active {
       box-shadow: 0 0 0 0.125em rgba(181, 181, 181, 0.25); }
   .select.is-success:not(:hover)::after {
-    border-color: #23d160; }
+    border-color: #ec7265; }
   .select.is-success select {
-    border-color: #23d160; }
+    border-color: #ec7265; }
     .select.is-success select:hover, .select.is-success select.is-hovered {
-      border-color: #20bc56; }
+      border-color: #e95d4e; }
     .select.is-success select:focus, .select.is-success select.is-focused, .select.is-success select:active, .select.is-success select.is-active {
-      box-shadow: 0 0 0 0.125em rgba(35, 209, 96, 0.25); }
+      box-shadow: 0 0 0 0.125em rgba(236, 114, 101, 0.25); }
   .select.is-warning:not(:hover)::after {
     border-color: #ffdd57; }
   .select.is-warning select {
@@ -2471,19 +2471,19 @@ a.box:active {
     border-color: transparent;
     color: #fff; }
   .file.is-success .file-cta {
-    background-color: #23d160;
+    background-color: #ec7265;
     border-color: transparent;
     color: #fff; }
   .file.is-success:hover .file-cta, .file.is-success.is-hovered .file-cta {
-    background-color: #22c65b;
+    background-color: #eb6859;
     border-color: transparent;
     color: #fff; }
   .file.is-success:focus .file-cta, .file.is-success.is-focused .file-cta {
     border-color: transparent;
-    box-shadow: 0 0 0.5em rgba(35, 209, 96, 0.25);
+    box-shadow: 0 0 0.5em rgba(236, 114, 101, 0.25);
     color: #fff; }
   .file.is-success:active .file-cta, .file.is-success.is-active .file-cta {
-    background-color: #20bc56;
+    background-color: #e95d4e;
     border-color: transparent;
     color: #fff; }
   .file.is-warning .file-cta {
@@ -2670,7 +2670,7 @@ a.box:active {
   .help.is-info {
     color: #b5b5b5; }
   .help.is-success {
-    color: #23d160; }
+    color: #ec7265; }
   .help.is-warning {
     color: #ffdd57; }
   .help.is-danger {
@@ -3005,7 +3005,7 @@ a.box:active {
     background-color: #b5b5b5;
     color: #fff; }
   .notification.is-success {
-    background-color: #23d160;
+    background-color: #ec7265;
     color: #fff; }
   .notification.is-warning {
     background-color: #ffdd57;
@@ -3076,11 +3076,11 @@ a.box:active {
   .progress.is-info::-ms-fill {
     background-color: #b5b5b5; }
   .progress.is-success::-webkit-progress-value {
-    background-color: #23d160; }
+    background-color: #ec7265; }
   .progress.is-success::-moz-progress-bar {
-    background-color: #23d160; }
+    background-color: #ec7265; }
   .progress.is-success::-ms-fill {
-    background-color: #23d160; }
+    background-color: #ec7265; }
   .progress.is-warning::-webkit-progress-value {
     background-color: #ffdd57; }
   .progress.is-warning::-moz-progress-bar {
@@ -3146,8 +3146,8 @@ a.box:active {
       color: #fff; }
     .table td.is-success,
     .table th.is-success {
-      background-color: #23d160;
-      border-color: #23d160;
+      background-color: #ec7265;
+      border-color: #ec7265;
       color: #fff; }
     .table td.is-warning,
     .table th.is-warning {
@@ -3291,7 +3291,7 @@ a.box:active {
     background-color: #b5b5b5;
     color: #fff; }
   .tag:not(body).is-success {
-    background-color: #23d160;
+    background-color: #ec7265;
     color: #fff; }
   .tag:not(body).is-warning {
     background-color: #ffdd57;
@@ -3833,13 +3833,13 @@ a.dropdown-item {
       border-color: #b5b5b5;
       color: #575757; }
   .message.is-success {
-    background-color: #f6fef9; }
+    background-color: #fef7f6; }
     .message.is-success .message-header {
-      background-color: #23d160;
+      background-color: #ec7265;
       color: #fff; }
     .message.is-success .message-body {
-      border-color: #23d160;
-      color: #0e301a; }
+      border-color: #ec7265;
+      color: #ae3022; }
   .message.is-warning {
     background-color: #fffdf5; }
     .message.is-warning .message-header {
@@ -4240,7 +4240,7 @@ a.dropdown-item {
         background-color: #b5b5b5;
         color: #fff; } }
   .navbar.is-success {
-    background-color: #23d160;
+    background-color: #ec7265;
     color: #fff; }
     .navbar.is-success .navbar-brand > .navbar-item,
     .navbar.is-success .navbar-brand .navbar-link {
@@ -4248,7 +4248,7 @@ a.dropdown-item {
     .navbar.is-success .navbar-brand > a.navbar-item:hover, .navbar.is-success .navbar-brand > a.navbar-item.is-active,
     .navbar.is-success .navbar-brand .navbar-link:hover,
     .navbar.is-success .navbar-brand .navbar-link.is-active {
-      background-color: #20bc56;
+      background-color: #e95d4e;
       color: #fff; }
     .navbar.is-success .navbar-brand .navbar-link::after {
       border-color: #fff; }
@@ -4265,17 +4265,17 @@ a.dropdown-item {
       .navbar.is-success .navbar-end > a.navbar-item.is-active,
       .navbar.is-success .navbar-end .navbar-link:hover,
       .navbar.is-success .navbar-end .navbar-link.is-active {
-        background-color: #20bc56;
+        background-color: #e95d4e;
         color: #fff; }
       .navbar.is-success .navbar-start .navbar-link::after,
       .navbar.is-success .navbar-end .navbar-link::after {
         border-color: #fff; }
       .navbar.is-success .navbar-item.has-dropdown:hover .navbar-link,
       .navbar.is-success .navbar-item.has-dropdown.is-active .navbar-link {
-        background-color: #20bc56;
+        background-color: #e95d4e;
         color: #fff; }
       .navbar.is-success .navbar-dropdown a.navbar-item.is-active {
-        background-color: #23d160;
+        background-color: #ec7265;
         color: #fff; } }
   .navbar.is-warning {
     background-color: #ffdd57;
@@ -6216,7 +6216,7 @@ label.panel-block {
         .hero.is-info.is-bold .navbar-menu {
           background-image: linear-gradient(141deg, #a59295 0%, #b5b5b5 71%, #c5c0bf 100%); } }
   .hero.is-success {
-    background-color: #23d160;
+    background-color: #ec7265;
     color: #fff; }
     .hero.is-success a:not(.button):not(.dropdown-item):not(.tag),
     .hero.is-success strong {
@@ -6230,14 +6230,14 @@ label.panel-block {
         color: #fff; }
     @media screen and (max-width: 1087px) {
       .hero.is-success .navbar-menu {
-        background-color: #23d160; } }
+        background-color: #ec7265; } }
     .hero.is-success .navbar-item,
     .hero.is-success .navbar-link {
       color: rgba(255, 255, 255, 0.7); }
     .hero.is-success a.navbar-item:hover, .hero.is-success a.navbar-item.is-active,
     .hero.is-success .navbar-link:hover,
     .hero.is-success .navbar-link.is-active {
-      background-color: #20bc56;
+      background-color: #e95d4e;
       color: #fff; }
     .hero.is-success .tabs a {
       color: #fff;
@@ -6253,12 +6253,12 @@ label.panel-block {
     .hero.is-success .tabs.is-boxed li.is-active a, .hero.is-success .tabs.is-boxed li.is-active a:hover, .hero.is-success .tabs.is-toggle li.is-active a, .hero.is-success .tabs.is-toggle li.is-active a:hover {
       background-color: #fff;
       border-color: #fff;
-      color: #23d160; }
+      color: #ec7265; }
     .hero.is-success.is-bold {
-      background-image: linear-gradient(141deg, #12af2f 0%, #23d160 71%, #2ce28a 100%); }
+      background-image: linear-gradient(141deg, #f22c39 0%, #ec7265 71%, #f29878 100%); }
       @media screen and (max-width: 768px) {
         .hero.is-success.is-bold .navbar-menu {
-          background-image: linear-gradient(141deg, #12af2f 0%, #23d160 71%, #2ce28a 100%); } }
+          background-image: linear-gradient(141deg, #f22c39 0%, #ec7265 71%, #f29878 100%); } }
   .hero.is-warning {
     background-color: #ffdd57;
     color: rgba(0, 0, 0, 0.7); }
