--- a/src/components/App.css
+++ b/src/components/App.css
@@ -6420,6 +6420,428 @@ label.panel-block {
   background-color: #fafafa;
   padding: 3rem 1.5rem 6rem; }
 
+.datepicker {
+  display: none; }
+  .datepicker.is-active {
+    display: flex; }
+    .datepicker.is-active .calendar {
+      position: fixed;
+      z-index: 40;
+      min-width: 20rem;
+      max-width: 20rem;
+      position: relative;
+      margin: 0 auto;
+      max-height: calc(100vh - 40px); }
+    .datepicker.is-active .calendar-nav {
+      flex-direction: column; }
+  .datepicker .calendar {
+    background: white;
+    border: none;
+    border-radius: 2px;
+    display: block;
+    min-width: 20rem;
+    text-align: center;
+    max-width: 20rem; }
+    .datepicker .calendar.is-active {
+      display: initial; }
+    .datepicker .calendar .calendar-nav {
+      background: #4a4a4a;
+      color: white;
+      border-top-left-radius: 2px;
+      border-top-right-radius: 2px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      font-size: 1.25rem;
+      padding: 0.5em; }
+      .datepicker .calendar .calendar-nav .calendar-nav-month,
+      .datepicker .calendar .calendar-nav .calendar-nav-day,
+      .datepicker .calendar .calendar-nav .calendar-nav-year {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center; }
+      .datepicker .calendar .calendar-nav .calendar-month,
+      .datepicker .calendar .calendar-nav .calendar-day,
+      .datepicker .calendar .calendar-nav .calendar-year {
+        flex: 1; }
+      .datepicker .calendar .calendar-nav .calendar-month {
+        font-size: 1.5rem; }
+      .datepicker .calendar .calendar-nav .calendar-day {
+        font-size: 2.5rem; }
+      .datepicker .calendar .calendar-nav .calendar-nav-previous-month, .datepicker .calendar .calendar-nav .calendar-nav-next-month,
+      .datepicker .calendar .calendar-nav .calendar-nav-previous-year, .datepicker .calendar .calendar-nav .calendar-nav-next-year {
+        flex-basis: auto;
+        flex-grow: 0;
+        flex-shrink: 0;
+        text-decoration: none;
+        color: white; }
+        .datepicker .calendar .calendar-nav .calendar-nav-previous-month:hover, .datepicker .calendar .calendar-nav .calendar-nav-next-month:hover,
+        .datepicker .calendar .calendar-nav .calendar-nav-previous-year:hover, .datepicker .calendar .calendar-nav .calendar-nav-next-year:hover {
+          background-color: transparent; }
+          .datepicker .calendar .calendar-nav .calendar-nav-previous-month:hover svg, .datepicker .calendar .calendar-nav .calendar-nav-next-month:hover svg,
+          .datepicker .calendar .calendar-nav .calendar-nav-previous-year:hover svg, .datepicker .calendar .calendar-nav .calendar-nav-next-year:hover svg {
+            stroke-width: 1em; }
+        .datepicker .calendar .calendar-nav .calendar-nav-previous-month svg, .datepicker .calendar .calendar-nav .calendar-nav-next-month svg,
+        .datepicker .calendar .calendar-nav .calendar-nav-previous-year svg, .datepicker .calendar .calendar-nav .calendar-nav-next-year svg {
+          stroke: currentColor;
+          width: 11.25px;
+          height: 18px; }
+    .datepicker .calendar .calendar-header, .datepicker .calendar .calendar-body {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center; }
+    .datepicker .calendar .calendar-header .calendar-date, .datepicker .calendar .calendar-body .calendar-date {
+      flex: 0 0 14.28%;
+      max-width: 14.28%; }
+    .datepicker .calendar .calendar-header {
+      padding: 1em 1em 0 1em;
+      background: transparent;
+      color: #fff;
+      font-size: 0.75rem; }
+      .datepicker .calendar .calendar-header .calendar-date {
+        color: #b5b5b5; }
+    .datepicker .calendar .calendar-body {
+      padding: 0 1em 1em 1em;
+      color: #7a7a7a; }
+    .datepicker .calendar .calendar-date {
+      border: 0;
+      padding: 0.4rem 0; }
+      .datepicker .calendar .calendar-date .date-item {
+        appearance: none;
+        background: transparent;
+        border: .1rem solid transparent;
+        border-radius: 100%;
+        color: #4a4a4a;
+        cursor: pointer;
+        height: 2.2rem;
+        line-height: 1.4rem;
+        outline: none;
+        padding: .3rem;
+        position: relative;
+        text-align: center;
+        text-decoration: none;
+        transition: all .2s ease;
+        vertical-align: middle;
+        white-space: nowrap;
+        width: 2.2rem; }
+        .datepicker .calendar .calendar-date .date-item.is-today {
+          background: transparent;
+          border-color: #4a4a4a;
+          color: #4a4a4a; }
+        .datepicker .calendar .calendar-date .date-item:focus {
+          background: whitesmoke;
+          border-color: whitesmoke;
+          color: rgba(0, 0, 0, 0.7);
+          text-decoration: none; }
+        .datepicker .calendar .calendar-date .date-item:hover {
+          background: whitesmoke;
+          border-color: whitesmoke;
+          color: rgba(0, 0, 0, 0.7);
+          text-decoration: none; }
+        .datepicker .calendar .calendar-date .date-item.is-active {
+          background: #4a4a4a;
+          border-color: #4a4a4a;
+          color: #fff; }
+      .datepicker .calendar .calendar-date.is-disabled .date-item, .datepicker .calendar .calendar-date.is-disabled .calendar-event, .datepicker .calendar .calendar-date[disabled] .date-item, .datepicker .calendar .calendar-date[disabled] .calendar-event {
+        cursor: default;
+        opacity: .25;
+        pointer-events: none; }
+    .datepicker .calendar .calendar-range {
+      position: relative; }
+      .datepicker .calendar .calendar-range::before {
+        background: #c9c9c9;
+        content: "";
+        height: 2.2rem;
+        left: 0;
+        position: absolute;
+        right: 0;
+        top: 50%;
+        transform: translateY(-50%); }
+      .datepicker .calendar .calendar-range.calendar-range-start::before {
+        left: 50%; }
+      .datepicker .calendar .calendar-range.calendar-range-end::before {
+        right: 50%; }
+      .datepicker .calendar .calendar-range .date-item {
+        color: #4a4a4a; }
+    .datepicker .calendar.is-large {
+      max-width: 100%; }
+      .datepicker .calendar.is-large .calendar-body .calendar-date {
+        border-bottom: none;
+        border-right: none;
+        display: flex;
+        flex-direction: column;
+        height: 11rem;
+        padding: 0; }
+        .datepicker .calendar.is-large .calendar-body .calendar-date:nth-child(7n) {
+          border-right: 0; }
+        .datepicker .calendar.is-large .calendar-body .calendar-date:nth-last-child(-n+7) {
+          border-bottom: 0; }
+      .datepicker .calendar.is-large .date-item {
+        align-self: flex-end;
+        height: 2.2rem;
+        margin-right: .5rem;
+        margin-top: .5rem; }
+      .datepicker .calendar.is-large .calendar-range::before {
+        top: 1.9rem; }
+      .datepicker .calendar.is-large .calendar-range.calendar-range-start::before {
+        left: auto;
+        width: 1.9rem; }
+      .datepicker .calendar.is-large .calendar-range.calendar-range-end::before {
+        right: 1.9rem; }
+      .datepicker .calendar.is-large .calendar-events {
+        flex-grow: 1;
+        line-height: 1;
+        overflow-y: auto;
+        padding: .5rem; }
+      .datepicker .calendar.is-large .calendar-event {
+        background-color: #7a7a7a;
+        border-radius: 2px;
+        color: white;
+        display: block;
+        font-size: 1rem;
+        margin: .2rem auto;
+        overflow: hidden;
+        padding: .3rem .4rem;
+        text-align: left;
+        text-overflow: ellipsis;
+        vertical-align: baseline;
+        white-space: nowrap; }
+        .datepicker .calendar.is-large .calendar-event.is-white {
+          background-color: white;
+          color: #0a0a0a; }
+        .datepicker .calendar.is-large .calendar-event.is-black {
+          background-color: #0a0a0a;
+          color: white; }
+        .datepicker .calendar.is-large .calendar-event.is-light {
+          background-color: whitesmoke;
+          color: #363636; }
+        .datepicker .calendar.is-large .calendar-event.is-dark {
+          background-color: #363636;
+          color: whitesmoke; }
+        .datepicker .calendar.is-large .calendar-event.is-primary {
+          background-color: #4a4a4a;
+          color: #fff; }
+        .datepicker .calendar.is-large .calendar-event.is-link {
+          background-color: #3273dc;
+          color: #fff; }
+        .datepicker .calendar.is-large .calendar-event.is-info {
+          background-color: #b5b5b5;
+          color: #fff; }
+        .datepicker .calendar.is-large .calendar-event.is-success {
+          background-color: #ec7265;
+          color: #fff; }
+        .datepicker .calendar.is-large .calendar-event.is-warning {
+          background-color: #ffdd57;
+          color: rgba(0, 0, 0, 0.7); }
+        .datepicker .calendar.is-large .calendar-event.is-danger {
+          background-color: #ff3860;
+          color: #fff; }
+
+.calendar {
+  background: white;
+  border: none;
+  border-radius: 2px;
+  display: block;
+  min-width: 20rem;
+  text-align: center;
+  max-width: 20rem; }
+  .calendar.is-active {
+    display: initial; }
+  .calendar .calendar-nav {
+    background: #4a4a4a;
+    color: white;
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 1.25rem;
+    padding: 0.5em; }
+    .calendar .calendar-nav .calendar-nav-month,
+    .calendar .calendar-nav .calendar-nav-day,
+    .calendar .calendar-nav .calendar-nav-year {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center; }
+    .calendar .calendar-nav .calendar-month,
+    .calendar .calendar-nav .calendar-day,
+    .calendar .calendar-nav .calendar-year {
+      flex: 1; }
+    .calendar .calendar-nav .calendar-month {
+      font-size: 1.5rem; }
+    .calendar .calendar-nav .calendar-day {
+      font-size: 2.5rem; }
+    .calendar .calendar-nav .calendar-nav-previous-month, .calendar .calendar-nav .calendar-nav-next-month,
+    .calendar .calendar-nav .calendar-nav-previous-year, .calendar .calendar-nav .calendar-nav-next-year {
+      flex-basis: auto;
+      flex-grow: 0;
+      flex-shrink: 0;
+      text-decoration: none;
+      color: white; }
+      .calendar .calendar-nav .calendar-nav-previous-month:hover, .calendar .calendar-nav .calendar-nav-next-month:hover,
+      .calendar .calendar-nav .calendar-nav-previous-year:hover, .calendar .calendar-nav .calendar-nav-next-year:hover {
+        background-color: transparent; }
+        .calendar .calendar-nav .calendar-nav-previous-month:hover svg, .calendar .calendar-nav .calendar-nav-next-month:hover svg,
+        .calendar .calendar-nav .calendar-nav-previous-year:hover svg, .calendar .calendar-nav .calendar-nav-next-year:hover svg {
+          stroke-width: 1em; }
+      .calendar .calendar-nav .calendar-nav-previous-month svg, .calendar .calendar-nav .calendar-nav-next-month svg,
+      .calendar .calendar-nav .calendar-nav-previous-year svg, .calendar .calendar-nav .calendar-nav-next-year svg {
+        stroke: currentColor;
+        width: 11.25px;
+        height: 18px; }
+  .calendar .calendar-header, .calendar .calendar-body {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; }
+  .calendar .calendar-header .calendar-date, .calendar .calendar-body .calendar-date {
+    flex: 0 0 14.28%;
+    max-width: 14.28%; }
+  .calendar .calendar-header {
+    padding: 1em 1em 0 1em;
+    background: transparent;
+    color: #fff;
+    font-size: 0.75rem; }
+    .calendar .calendar-header .calendar-date {
+      color: #b5b5b5; }
+  .calendar .calendar-body {
+    padding: 0 1em 1em 1em;
+    color: #7a7a7a; }
+  .calendar .calendar-date {
+    border: 0;
+    padding: 0.4rem 0; }
+    .calendar .calendar-date .date-item {
+      appearance: none;
+      background: transparent;
+      border: .1rem solid transparent;
+      border-radius: 100%;
+      color: #4a4a4a;
+      cursor: pointer;
+      height: 2.2rem;
+      line-height: 1.4rem;
+      outline: none;
+      padding: .3rem;
+      position: relative;
+      text-align: center;
+      text-decoration: none;
+      transition: all .2s ease;
+      vertical-align: middle;
+      white-space: nowrap;
+      width: 2.2rem; }
+      .calendar .calendar-date .date-item.is-today {
+        background: transparent;
+        border-color: #4a4a4a;
+        color: #4a4a4a; }
+      .calendar .calendar-date .date-item:focus {
+        background: whitesmoke;
+        border-color: whitesmoke;
+        color: rgba(0, 0, 0, 0.7);
+        text-decoration: none; }
+      .calendar .calendar-date .date-item:hover {
+        background: whitesmoke;
+        border-color: whitesmoke;
+        color: rgba(0, 0, 0, 0.7);
+        text-decoration: none; }
+      .calendar .calendar-date .date-item.is-active {
+        background: #4a4a4a;
+        border-color: #4a4a4a;
+        color: #fff; }
+    .calendar .calendar-date.is-disabled .date-item, .calendar .calendar-date.is-disabled .calendar-event, .calendar .calendar-date[disabled] .date-item, .calendar .calendar-date[disabled] .calendar-event {
+      cursor: default;
+      opacity: .25;
+      pointer-events: none; }
+  .calendar .calendar-range {
+    position: relative; }
+    .calendar .calendar-range::before {
+      background: #c9c9c9;
+      content: "";
+      height: 2.2rem;
+      left: 0;
+      position: absolute;
+      right: 0;
+      top: 50%;
+      transform: translateY(-50%); }
+    .calendar .calendar-range.calendar-range-start::before {
+      left: 50%; }
+    .calendar .calendar-range.calendar-range-end::before {
+      right: 50%; }
+    .calendar .calendar-range .date-item {
+      color: #4a4a4a; }
+  .calendar.is-large {
+    max-width: 100%; }
+    .calendar.is-large .calendar-body .calendar-date {
+      border-bottom: none;
+      border-right: none;
+      display: flex;
+      flex-direction: column;
+      height: 11rem;
+      padding: 0; }
+      .calendar.is-large .calendar-body .calendar-date:nth-child(7n) {
+        border-right: 0; }
+      .calendar.is-large .calendar-body .calendar-date:nth-last-child(-n+7) {
+        border-bottom: 0; }
+    .calendar.is-large .date-item {
+      align-self: flex-end;
+      height: 2.2rem;
+      margin-right: .5rem;
+      margin-top: .5rem; }
+    .calendar.is-large .calendar-range::before {
+      top: 1.9rem; }
+    .calendar.is-large .calendar-range.calendar-range-start::before {
+      left: auto;
+      width: 1.9rem; }
+    .calendar.is-large .calendar-range.calendar-range-end::before {
+      right: 1.9rem; }
+    .calendar.is-large .calendar-events {
+      flex-grow: 1;
+      line-height: 1;
+      overflow-y: auto;
+      padding: .5rem; }
+    .calendar.is-large .calendar-event {
+      background-color: #7a7a7a;
+      border-radius: 2px;
+      color: white;
+      display: block;
+      font-size: 1rem;
+      margin: .2rem auto;
+      overflow: hidden;
+      padding: .3rem .4rem;
+      text-align: left;
+      text-overflow: ellipsis;
+      vertical-align: baseline;
+      white-space: nowrap; }
+      .calendar.is-large .calendar-event.is-white {
+        background-color: white;
+        color: #0a0a0a; }
+      .calendar.is-large .calendar-event.is-black {
+        background-color: #0a0a0a;
+        color: white; }
+      .calendar.is-large .calendar-event.is-light {
+        background-color: whitesmoke;
+        color: #363636; }
+      .calendar.is-large .calendar-event.is-dark {
+        background-color: #363636;
+        color: whitesmoke; }
+      .calendar.is-large .calendar-event.is-primary {
+        background-color: #4a4a4a;
+        color: #fff; }
+      .calendar.is-large .calendar-event.is-link {
+        background-color: #3273dc;
+        color: #fff; }
+      .calendar.is-large .calendar-event.is-info {
+        background-color: #b5b5b5;
+        color: #fff; }
+      .calendar.is-large .calendar-event.is-success {
+        background-color: #ec7265;
+        color: #fff; }
+      .calendar.is-large .calendar-event.is-warning {
+        background-color: #ffdd57;
+        color: rgba(0, 0, 0, 0.7); }
+      .calendar.is-large .calendar-event.is-danger {
+        background-color: #ff3860;
+        color: #fff; }
+
 html {
   background: url("../assets/bg_full.jpg") top right no-repeat;
   background-attachment: fixed;
